--- a/Create-Entry.html
+++ b/Create-Entry.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Create an Entry</title>
     </head>
     <body>
         <a href="index.html">HOME</a>
-        <h1></h1>
+        <h1>Upload</h1>
     </body>
 </html>
