--- a/Create-Entry.html
+++ b/Create-Entry.html
@@ -6,5 +6,7 @@
     <body>
         <a href="index.html">HOME</a>
         <h1>Upload</h1>
+        <h2>Use Default Preferences</h2>
+        <h2>Use Custom Preferences</h2>
     </body>
 </html>
