--- a/Browse-Entries.html
+++ b/Browse-Entries.html
@@ -6,5 +6,9 @@
     <body>
         <a href="index.html">HOME</a>
         <h1>Browse Feed</h1>
+        <h2>Favorite</h2>
+        <h2>Share</h2>
+        <h2>Comment</h2>
+        <h2>Report</h2>
     </body>
 </html>
