--- a/View-Profile.html
+++ b/View-Profile.html
@@ -6,5 +6,7 @@
     <body>
         <a href="index.html">HOME</a>
         <h1>Your Profile</h1>
+        <h2>Edit Profile</h2>
+        <h2>Edit Image Settings</h2>
     </body>
 </html>
